--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,809 +1,601 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "layouts/default.f51e18cd2de54e047f67.js.map",
-    "layouts/default.f51e18cd2de54e047f67.js",
-    "pages/page3.9bec81290297cfd00adf.js",
-    "pages/page2.04e180a4cb0334f865ba.js",
-    "common.c1d4db95c43fd503a449.js",
-    "app.ccef95ba268df3c4827e.js",
-    "manifest.8a213c384e25c05c37a5.js",
-    "common.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css",
+    "app.4af136f357ff844f6f2e.js",
+    "pages/page3.3a8020ebc604c7f0281b.js",
+    "layouts/default.09a79ccc2717c91e4566.js",
+    "pages/index.aa94d51a1abbea58b49b.js",
+    "vendor.def91941182befca8868.js",
+    "pages/page2.dec818e4d34c134e0fd9.js",
+    "manifest.4d13fc681666b3ccae7e.js",
+    "app.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css",
     "LICENSES",
-    "pages/index.827007c775919958d7e5.js",
-    "pages/index.827007c775919958d7e5.js.map",
-    "pages/page3.9bec81290297cfd00adf.js.map",
-    "pages/page2.04e180a4cb0334f865ba.js.map",
-    "common.c1d4db95c43fd503a449.js.map",
-    "app.ccef95ba268df3c4827e.js.map",
-    "common.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css.map",
-    "manifest.8a213c384e25c05c37a5.js.map",
     "index.spa.html",
     "index.ssr.html"
   ],
   "initial": [
-    "manifest.8a213c384e25c05c37a5.js",
-    "common.c1d4db95c43fd503a449.js",
-    "app.ccef95ba268df3c4827e.js"
+    "manifest.4d13fc681666b3ccae7e.js",
+    "vendor.def91941182befca8868.js",
+    "app.4af136f357ff844f6f2e.js"
   ],
   "async": [
-    "layouts/default.f51e18cd2de54e047f67.js",
-    "pages/page3.9bec81290297cfd00adf.js",
-    "pages/page2.04e180a4cb0334f865ba.js",
-    "pages/index.827007c775919958d7e5.js"
+    "pages/page3.3a8020ebc604c7f0281b.js",
+    "layouts/default.09a79ccc2717c91e4566.js",
+    "pages/index.aa94d51a1abbea58b49b.js",
+    "pages/page2.dec818e4d34c134e0fd9.js"
   ],
   "modules": {
-    "29377904": [
-      4,
-      13
-    ],
-    "46623209": [
-      4,
-      13
-    ],
     "79194297": [
-      4,
-      13
+      4
     ],
-    "64c1217f": [
-      4,
-      13
+    "5e2030fb": [
+      4
     ],
-    "3ee7fb5c": [
-      4,
-      13
+    "1afbd6da": [
+      4
     ],
-    "bd6f9968": [
-      4,
-      13
+    "0d9fa303": [
+      4
     ],
-    "b35afc66": [
-      4,
-      13
+    "0431bbbc": [
+      3
+    ],
+    "7df351b6": [
+      4
     ],
     "36b9dc52": [
-      4,
-      13
+      4
     ],
     "4aab67b4": [
-      9,
-      10
+      3
     ],
-    "957bec04": [
-      4,
-      13
-    ],
-    "808b67e4": [
-      4,
-      13
+    "63fbec6f": [
+      0,
+      7
     ],
     "788544ed": [
-      4,
-      13
+      4
     ],
-    "d54a0334": [
-      4,
-      13
+    "024f5a4c": [
+      4
     ],
-    "a05b4edc": [
-      3,
-      12
+    "d3c8325a": [
+      1
+    ],
+    "8688f21c": [
+      4
+    ],
+    "3f060786": [
+      4
+    ],
+    "611f57fa": [
+      4
     ],
     "040ce483": [
-      9,
-      10
+      3
     ],
-    "6131818a": [
-      4,
-      13
+    "5c2440d0": [
+      3
     ],
-    "2df2408e": [
-      4,
-      13
+    "6bd4595b": [
+      4
     ],
-    "60ae2b3d": [
-      5,
-      7,
-      14,
-      15
+    "73ce399d": [
+      2
     ],
-    "5cfb1c93": [
-      4,
-      13
+    "bc180dd0": [
+      4
     ],
-    "72be1a4a": [
-      5,
-      7,
-      14,
-      15
+    "30aa712b": [
+      4
     ],
-    "d4996dac": [
-      4,
-      13
+    "c55dfb58": [
+      4
     ],
-    "505f99e0": [
-      9,
-      10
+    "d5fec4e2": [
+      2
     ],
-    "321fbe42": [
-      4,
-      13
+    "e1dacf22": [
+      0,
+      7
     ],
-    "7740a63a": [
-      4,
-      13
+    "027a9eea": [
+      4
     ],
-    "5a817724": [
-      4,
-      13
+    "02a994ae": [
+      4
     ],
-    "127a1ca4": [
-      4,
-      13
+    "125270ed": [
+      4
     ],
-    "0426ef08": [
-      4,
-      13
+    "74bddcb4": [
+      0,
+      7
     ],
-    "5cc88cd5": [
-      4,
-      13
+    "743833c4": [
+      4
     ],
-    "1c191efa": [
-      4,
-      13
+    "448c0680": [
+      2
     ],
-    "2d8ee81d": [
-      4,
-      13
+    "7359f3b7": [
+      4
     ],
-    "6283a3f2": [
-      4,
-      13
+    "4607720a": [
+      2
     ],
-    "c7c9bb3e": [
-      1,
-      0
+    "9d1a1a08": [
+      4
+    ],
+    "b056162c": [
+      4
     ],
     "2f49522c": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "3a44b5f8": [
-      4,
-      13
+    "ea7712fa": [
+      4
     ],
-    "61cb7abe": [
-      4,
-      13
+    "6aac00bf": [
+      4
     ],
-    "1f327cc0": [
-      4,
-      13
+    "29f50b6c": [
+      4
     ],
-    "38e3f4cf": [
-      4,
-      13
+    "6f284ceb": [
+      4
     ],
-    "24aa62f5": [
-      4,
-      13
+    "514a429b": [
+      2
     ],
-    "92fb1966": [
-      4,
-      13
+    "2db39f25": [
+      2
     ],
-    "2e704c4e": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "2889e881": [
-      4,
-      13
+    "995fc0e6": [
+      4
     ],
     "744c674f": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "ef3713a8": [
-      5,
-      7,
-      14,
-      15
+    "741cf150": [
+      4
     ],
-    "60e873ac": [
-      9,
-      10
+    "bf076a84": [
+      4
     ],
-    "6e6e5de2": [
-      4,
-      13
-    ],
-    "c183d4c2": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "fc4bed56": [
-      2,
-      11
-    ],
-    "aa2dc4c2": [
-      4,
-      13
-    ],
-    "387ec561": [
-      4,
-      13
+    "7aed6f9c": [
+      4
     ],
     "2f9c3c1f": [
-      5,
-      7,
-      14,
-      15
+      4
     ],
-    "d55a72e8": [
-      4,
-      13
+    "0d5ef3e4": [
+      4
     ],
-    "ae1e5622": [
-      1,
-      0
+    "70cc0d4a": [
+      0,
+      7
     ],
-    "0fd0ca2a": [
-      9,
-      10
+    "42a13678": [
+      4
     ],
-    "63fe4bbe": [
-      1,
-      0
+    "770c25a0": [
+      4
     ],
-    "249fa523": [
-      4,
-      13
+    "0f2779ad": [
+      4
     ],
-    "3d4cf8a0": [
-      5,
-      7,
-      14,
-      15
+    "5770f60c": [
+      4
     ],
-    "f0888110": [
-      5,
-      7,
-      14,
-      15
+    "45363eff": [
+      4
+    ],
+    "5e00d654": [
+      4
+    ],
+    "796b0802": [
+      5
+    ],
+    "832771fe": [
+      5
+    ],
+    "059cc163": [
+      2
     ],
     "07cf7d45": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "62cc7276": [
-      9,
-      10
+    "09b53bf0": [
+      4
     ],
-    "37011ee0": [
-      4,
-      13
-    ],
-    "00c9aee6": [
-      4,
-      13
-    ],
-    "612aaff9": [
-      4,
-      13
-    ],
-    "5fc419ea": [
-      4,
-      13
-    ],
-    "e5659a0a": [
-      4,
-      13
-    ],
-    "3d2f0770": [
-      5,
-      7,
-      14,
-      15
+    "f9e99f78": [
+      2
     ],
     "2360becc": [
-      1,
-      0
+      2
     ],
-    "1cd872f4": [
-      4,
-      13
+    "e5c69994": [
+      4
     ],
-    "d43e3354": [
-      4,
-      13
-    ],
-    "26eb2360": [
-      4,
-      13
+    "892ad456": [
+      4
     ],
     "19bb5f2e": [
-      4,
-      13
+      4
     ],
-    "019f94cd": [
-      4,
-      13
+    "71ae15f6": [
+      4
     ],
-    "dc79eb70": [
-      4,
-      13
+    "5f71a874": [
+      4
     ],
-    "1e3dfa44": [
-      4,
-      13
+    "c3f7132a": [
+      4
     ],
-    "773c150c": [
-      4,
-      13
+    "2a3e087a": [
+      4
     ],
-    "899b705a": [
-      3,
-      12
+    "4eb3c4c8": [
+      4
     ],
-    "1aa9b11a": [
-      4,
-      13
+    "546dcf2a": [
+      4
     ],
-    "e75def2a": [
-      4,
-      13
+    "140209c4": [
+      4
     ],
-    "616cb356": [
-      4,
-      13
+    "7ce93eb8": [
+      4
     ],
-    "8ff5a01c": [
-      4,
-      13
+    "a2a89a8c": [
+      4
     ],
-    "3e995729": [
-      4,
-      13
+    "0ce30570": [
+      4
     ],
-    "7ad54aac": [
-      1,
-      0
+    "6c05d4a1": [
+      0,
+      7
     ],
-    "b3d23a00": [
-      4,
-      13
+    "7976bd2c": [
+      4
     ],
-    "b8f68598": [
-      4,
-      13
+    "6692f75d": [
+      4
     ],
-    "3dc9405b": [
-      4,
-      13
+    "ebf93eb8": [
+      0,
+      7
     ],
-    "5937d6ae": [
-      4,
-      13
+    "0f884e38": [
+      4
     ],
-    "58da1c98": [
-      4,
-      13
+    "501bc96e": [
+      4
     ],
-    "47816b02": [
-      5,
-      7,
-      14,
-      15
+    "cf8af72a": [
+      4
+    ],
+    "43c2a175": [
+      4
+    ],
+    "c56c87cc": [
+      4
+    ],
+    "e5f67650": [
+      0,
+      7
     ],
     "47c64385": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "dbf72f96": [
-      4,
-      13
-    ],
-    "5cfccf11": [
-      1,
-      0
+      0,
+      7
     ],
     "3ef98b93": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "dcf098f4": [
-      4,
-      13
+    "6f001778": [
+      0,
+      7
     ],
-    "71b1e390": [
-      4,
-      13
+    "a07720a4": [
+      4
     ],
-    "469af01f": [
-      4,
-      13
+    "27c81414": [
+      4
     ],
-    "23a08e14": [
-      4,
-      13
+    "20981b9e": [
+      4
     ],
     "94cd14fc": [
-      5,
-      7,
-      14,
-      15
+      4
     ],
-    "822bd88c": [
-      4,
-      13
+    "0ca7b0ee": [
+      4
     ],
-    "3756ff22": [
-      5,
-      7,
-      14,
-      15
+    "1c321d7a": [
+      4
     ],
-    "71dd26a3": [
-      4,
-      13
+    "d1486f64": [
+      4
     ],
-    "0e072e66": [
-      4,
-      13
+    "cd5026f0": [
+      4
+    ],
+    "6075ca80": [
+      4
+    ],
+    "78ab2fa1": [
+      4
+    ],
+    "60fafa98": [
+      4
+    ],
+    "529afe55": [
+      4
     ],
     "40ea5065": [
-      1,
-      0
+      2
     ],
-    "60a47c59": [
-      4,
-      13
+    "c5cb38ca": [
+      4
     ],
-    "15f027a7": [
-      1,
-      0
+    "56f45715": [
+      0,
+      7
     ],
-    "4d975aa3": [
-      4,
-      13
+    "eb767ef6": [
+      4
     ],
     "e463835a": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "9176d998": [
-      4,
-      13
+    "73327e99": [
+      4
     ],
-    "3d713a72": [
-      4,
-      13
+    "fdb45a54": [
+      4
+    ],
+    "2a8d8c9a": [
+      4
+    ],
+    "528c5d08": [
+      4
+    ],
+    "7be30ef3": [
+      4
+    ],
+    "1c7c02ec": [
+      4
+    ],
+    "1d30a3b7": [
+      4
+    ],
+    "98174c0e": [
+      4
     ],
     "39837d7f": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "7ecaa87c": [
-      4,
-      13
+    "37317da0": [
+      4
     ],
-    "2cfd7de2": [
-      4,
-      13
+    "4e7a4bee": [
+      4
     ],
-    "6087ce64": [
-      4,
-      13
+    "fbdbe97c": [
+      4
     ],
-    "607e2e2a": [
-      4,
-      13
+    "466f472a": [
+      4
     ],
     "501940d1": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "8f3f0fd4": [
-      1,
-      0
+    "3d1203cc": [
+      4
     ],
-    "e27b11f4": [
-      4,
-      13
+    "1c70b836": [
+      4
     ],
     "6f87858e": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "07a8c5c9": [
-      4,
-      13
+    "f2de44c2": [
+      4
     ],
-    "73ed9798": [
-      4,
-      13
+    "6d2f3542": [
+      4
     ],
-    "7036a92e": [
-      4,
-      13
+    "bbd381e8": [
+      4
     ],
-    "525ac374": [
-      4,
-      13
+    "acebaaa6": [
+      3
     ],
-    "3eb09304": [
-      4,
-      13
+    "524f2f08": [
+      4
     ],
-    "4ec596d6": [
-      4,
-      13
+    "299b5b75": [
+      4
     ],
-    "a0587dd4": [
-      4,
-      13
+    "830b42fc": [
+      1
     ],
-    "2f607bd6": [
-      4,
-      13
+    "e9b0bbd0": [
+      4
     ],
-    "58b4a814": [
-      4,
-      13
+    "6793130f": [
+      4
     ],
-    "897f4158": [
-      2,
-      11
+    "b619ce5a": [
+      4
     ],
-    "da60dbee": [
-      4,
-      13
+    "29f04434": [
+      4
     ],
-    "13aed1b2": [
-      4,
-      13
-    ],
-    "65e24a88": [
-      1,
-      0
-    ],
-    "df7a1c22": [
-      4,
-      13
-    ],
-    "24f1d7e7": [
-      4,
-      13
-    ],
-    "5c5e9873": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "03986b13": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "06349957": [
-      4,
-      13
-    ],
-    "5a16cb3d": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "024b14fa": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "f512fbda": [
-      4,
-      13
+    "58c37c22": [
+      3
     ],
     "8af96156": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "ecff24fc": [
-      1,
-      0
+    "0bb8b0ec": [
+      4
     ],
-    "1fb7ec73": [
-      1,
-      0
+    "696c0120": [
+      2
     ],
-    "629e580d": [
-      4,
-      13
-    ],
-    "68f03547": [
-      4,
-      13
-    ],
-    "2438cbe1": [
-      4,
-      13
-    ],
-    "06ce3ce6": [
-      4,
-      13
+    "e28ad05c": [
+      4
     ],
     "3d0069d8": [
-      2,
-      11
+      1
     ],
-    "00012de0": [
-      4,
-      13
+    "6a36a5c7": [
+      4
     ],
-    "790246a2": [
-      4,
-      13
+    "6d376d1c": [
+      4
     ],
-    "612f3baf": [
-      4,
-      13
+    "2328fe5d": [
+      2
+    ],
+    "2c447258": [
+      4
     ],
     "216f857d": [
-      4,
-      13
+      4
     ],
-    "261a08f5": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "5beab8ba": [
-      4,
-      13
+    "f85984b0": [
+      4
     ],
     "14a765be": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "58ea41a2": [
-      9,
-      10
+    "d1639e04": [
+      4
     ],
-    "e34a5858": [
-      4,
-      13
+    "55998bd8": [
+      4
     ],
-    "237ff494": [
-      5,
-      7,
-      14,
-      15
+    "58b0328d": [
+      4
     ],
-    "136533c5": [
-      1,
-      0
+    "6f17b6a2": [
+      4
     ],
-    "24e321dc": [
-      4,
-      13
+    "52f54708": [
+      4
     ],
-    "1155fbd7": [
-      4,
-      13
+    "559e178e": [
+      4
     ],
-    "ea0066e6": [
-      5,
-      7,
-      14,
-      15
+    "55a72efa": [
+      4
     ],
-    "fda5c76e": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "398e1572": [
-      4,
-      13
-    ],
-    "23657e28": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "0db1655a": [
-      4,
-      13
-    ],
-    "3a6f4cb8": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "6bb98e3e": [
-      1,
-      0
-    ],
-    "065262b7": [
-      4,
-      13
-    ],
-    "4f0514cf": [
-      1,
-      0
-    ],
-    "ca549928": [
-      4,
-      13
-    ],
-    "1add825a": [
-      4,
-      13
+    "395fd1c4": [
+      4
     ],
     "099c059d": [
-      5,
-      7,
-      14,
-      15
+      0,
+      7
     ],
-    "25ab842e": [
-      4,
-      13
+    "18d26f16": [
+      4
     ],
-    "023aa89b": [
-      4,
-      13
+    "0bfd7190": [
+      4
     ],
-    "3900e649": [
-      4,
-      13
+    "3f864c39": [
+      4
+    ],
+    "ea0066e6": [
+      4
+    ],
+    "9fa35cb6": [
+      4
+    ],
+    "1220d7bd": [
+      2
+    ],
+    "5d049f18": [
+      4
+    ],
+    "23657e28": [
+      0,
+      7
+    ],
+    "3a6f4cb8": [
+      4
+    ],
+    "66ca8c10": [
+      4
+    ],
+    "068ec0c8": [
+      2
+    ],
+    "091aff1d": [
+      4
+    ],
+    "8d391bf8": [
+      4
+    ],
+    "59665d7e": [
+      0,
+      7
+    ],
+    "ab07abdc": [
+      3
+    ],
+    "3d83df88": [
+      4
     ],
     "3cf25257": [
-      3,
-      12
+      5
     ],
-    "22db444a": [
-      4,
-      13
+    "554696d6": [
+      4
     ],
-    "e6ce2936": [
-      4,
-      13
+    "74f0437d": [
+      4
+    ],
+    "0d9849c6": [
+      4
+    ],
+    "49cb8b3a": [
+      4
+    ],
+    "60ede85a": [
+      4
+    ],
+    "1fb7ec73": [
+      2
+    ],
+    "09a2ece8": [
+      4
+    ],
+    "56a2883e": [
+      4
+    ],
+    "abe5e8b8": [
+      4
+    ],
+    "1aa3e7d9": [
+      4
+    ],
+    "1459410a": [
+      4
     ]
   }
 }
