update to using Node 8 because firebase now supports it. also updated nuxt because can use latest version now

--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,382 +1,391 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "app.4af136f357ff844f6f2e.js",
-    "pages/page3.3a8020ebc604c7f0281b.js",
-    "layouts/default.2720a4e33032deea0344.js",
-    "pages/index.aa94d51a1abbea58b49b.js",
-    "vendor.def91941182befca8868.js",
-    "pages/page2.dec818e4d34c134e0fd9.js",
-    "manifest.c19e4391b11bead3ac94.js",
+    "app.2ea00140bc66d5c0b93f.js",
+    "layouts/default.e665b99e68955107c34b.js",
+    "pages/page3.8ead38160a13ddc07dd7.js",
+    "pages/page2.b569b1e584e51c51128c.js",
+    "vendor.5a8a5463dbe86c3ce54c.js",
+    "pages/index.be7588de6c6ef604b340.js",
+    "manifest.2836d3f89304742eb061.js",
     "app.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css",
     "LICENSES",
     "index.spa.html",
     "index.ssr.html"
   ],
   "initial": [
-    "manifest.c19e4391b11bead3ac94.js",
-    "vendor.def91941182befca8868.js",
-    "app.4af136f357ff844f6f2e.js"
+    "manifest.2836d3f89304742eb061.js",
+    "vendor.5a8a5463dbe86c3ce54c.js",
+    "app.2ea00140bc66d5c0b93f.js"
   ],
   "async": [
-    "pages/page3.3a8020ebc604c7f0281b.js",
-    "layouts/default.2720a4e33032deea0344.js",
-    "pages/index.aa94d51a1abbea58b49b.js",
-    "pages/page2.dec818e4d34c134e0fd9.js"
+    "layouts/default.e665b99e68955107c34b.js",
+    "pages/page3.8ead38160a13ddc07dd7.js",
+    "pages/page2.b569b1e584e51c51128c.js",
+    "pages/index.be7588de6c6ef604b340.js"
   ],
   "modules": {
+    "29377904": [
+      4
+    ],
+    "46623209": [
+      4
+    ],
+    "56839276": [
+      1
+    ],
     "79194297": [
+      4
+    ],
+    "64c1217f": [
       4
     ],
     "5e2030fb": [
       4
     ],
-    "1afbd6da": [
-      4
-    ],
-    "0d9fa303": [
+    "3ee7fb5c": [
       4
     ],
     "0431bbbc": [
-      3
+      5
     ],
-    "7df351b6": [
+    "bd6f9968": [
+      4
+    ],
+    "b35afc66": [
       4
     ],
     "36b9dc52": [
       4
     ],
     "4aab67b4": [
-      3
+      5
     ],
     "63fbec6f": [
       0,
       7
     ],
+    "957bec04": [
+      4
+    ],
+    "808b67e4": [
+      4
+    ],
     "788544ed": [
       4
     ],
-    "024f5a4c": [
+    "d54a0334": [
       4
     ],
     "d3c8325a": [
-      1
+      2
     ],
     "8688f21c": [
-      4
-    ],
-    "3f060786": [
       4
     ],
     "611f57fa": [
       4
     ],
     "040ce483": [
-      3
+      5
     ],
-    "5c2440d0": [
-      3
-    ],
-    "6bd4595b": [
+    "6131818a": [
       4
     ],
-    "73ce399d": [
-      2
-    ],
-    "bc180dd0": [
+    "2df2408e": [
       4
     ],
-    "30aa712b": [
+    "5cfb1c93": [
       4
     ],
-    "c55dfb58": [
+    "d4996dac": [
       4
-    ],
-    "d5fec4e2": [
-      2
     ],
     "e1dacf22": [
       0,
       7
     ],
-    "027a9eea": [
+    "321fbe42": [
       4
     ],
-    "02a994ae": [
+    "7740a63a": [
       4
     ],
-    "125270ed": [
+    "5a817724": [
       4
     ],
     "74bddcb4": [
       0,
       7
     ],
-    "743833c4": [
+    "127a1ca4": [
+      4
+    ],
+    "0426ef08": [
+      4
+    ],
+    "5cc88cd5": [
       4
     ],
     "448c0680": [
-      2
+      1
     ],
-    "7359f3b7": [
-      4
+    "7f9500bc": [
+      0,
+      7
     ],
     "4607720a": [
-      2
+      1
     ],
-    "9d1a1a08": [
+    "1c191efa": [
       4
     ],
-    "b056162c": [
+    "2d8ee81d": [
+      4
+    ],
+    "6283a3f2": [
       4
     ],
     "2f49522c": [
       0,
       7
     ],
-    "ea7712fa": [
+    "3a44b5f8": [
       4
     ],
-    "6aac00bf": [
+    "c4697bae": [
+      3
+    ],
+    "61cb7abe": [
       4
     ],
-    "29f50b6c": [
+    "1f327cc0": [
       4
     ],
-    "6f284ceb": [
+    "38e3f4cf": [
+      4
+    ],
+    "24aa62f5": [
+      4
+    ],
+    "92fb1966": [
       4
     ],
     "514a429b": [
-      2
+      1
+    ],
+    "068ec0c8": [
+      1
+    ],
+    "18d26f16": [
+      4
     ],
     "2db39f25": [
-      2
+      1
     ],
-    "995fc0e6": [
+    "2889e881": [
       4
     ],
     "744c674f": [
       0,
       7
     ],
-    "741cf150": [
+    "6e6e5de2": [
       4
     ],
-    "bf076a84": [
+    "aa2dc4c2": [
       4
     ],
-    "7aed6f9c": [
+    "387ec561": [
       4
     ],
     "2f9c3c1f": [
       4
     ],
-    "0d5ef3e4": [
+    "d55a72e8": [
       4
     ],
     "70cc0d4a": [
       0,
       7
     ],
-    "42a13678": [
-      4
-    ],
-    "770c25a0": [
-      4
-    ],
-    "0f2779ad": [
-      4
-    ],
-    "5770f60c": [
-      4
-    ],
-    "45363eff": [
+    "249fa523": [
       4
     ],
     "5e00d654": [
       4
     ],
     "796b0802": [
-      5
-    ],
-    "832771fe": [
-      5
+      3
     ],
     "059cc163": [
-      2
+      1
     ],
     "07cf7d45": [
       0,
       7
     ],
-    "09b53bf0": [
+    "37011ee0": [
       4
     ],
-    "f9e99f78": [
-      2
+    "00c9aee6": [
+      4
+    ],
+    "612aaff9": [
+      4
+    ],
+    "5fc419ea": [
+      4
+    ],
+    "e5659a0a": [
+      4
     ],
     "2360becc": [
-      2
+      1
     ],
     "e5c69994": [
       4
     ],
-    "892ad456": [
+    "1cd872f4": [
+      4
+    ],
+    "d43e3354": [
+      4
+    ],
+    "26eb2360": [
       4
     ],
     "19bb5f2e": [
       4
     ],
-    "71ae15f6": [
+    "019f94cd": [
       4
     ],
-    "5f71a874": [
+    "dc79eb70": [
       4
     ],
-    "c3f7132a": [
+    "1e3dfa44": [
       4
     ],
-    "2a3e087a": [
+    "773c150c": [
       4
     ],
-    "4eb3c4c8": [
-      4
-    ],
-    "546dcf2a": [
-      4
-    ],
-    "140209c4": [
-      4
-    ],
-    "7ce93eb8": [
-      4
-    ],
-    "a2a89a8c": [
-      4
-    ],
-    "0ce30570": [
+    "1aa9b11a": [
       4
     ],
     "6c05d4a1": [
       0,
       7
     ],
-    "7976bd2c": [
+    "e75def2a": [
       4
     ],
-    "6692f75d": [
+    "616cb356": [
       4
     ],
-    "ebf93eb8": [
-      0,
-      7
-    ],
-    "0f884e38": [
+    "8ff5a01c": [
       4
     ],
-    "501bc96e": [
+    "3e995729": [
       4
     ],
-    "cf8af72a": [
+    "b3d23a00": [
       4
     ],
-    "43c2a175": [
+    "b8f68598": [
       4
     ],
-    "c56c87cc": [
+    "3dc9405b": [
       4
     ],
-    "e5f67650": [
-      0,
-      7
+    "5937d6ae": [
+      4
+    ],
+    "58da1c98": [
+      4
+    ],
+    "47816b02": [
+      4
     ],
     "47c64385": [
       0,
       7
     ],
+    "dbf72f96": [
+      4
+    ],
     "3ef98b93": [
       0,
       7
+    ],
+    "dcf098f4": [
+      4
     ],
     "6f001778": [
       0,
       7
     ],
-    "a07720a4": [
+    "71b1e390": [
+      4
+    ],
+    "469af01f": [
+      4
+    ],
+    "23a08e14": [
       4
     ],
     "27c81414": [
       4
     ],
-    "20981b9e": [
-      4
-    ],
     "94cd14fc": [
-      4
-    ],
-    "0ca7b0ee": [
-      4
-    ],
-    "1c321d7a": [
       4
     ],
     "d1486f64": [
       4
     ],
-    "cd5026f0": [
+    "822bd88c": [
       4
     ],
-    "6075ca80": [
+    "71dd26a3": [
       4
     ],
-    "78ab2fa1": [
-      4
-    ],
-    "60fafa98": [
-      4
-    ],
-    "529afe55": [
+    "0e072e66": [
       4
     ],
     "40ea5065": [
-      2
+      1
     ],
-    "c5cb38ca": [
+    "60a47c59": [
       4
     ],
     "56f45715": [
       0,
       7
     ],
-    "eb767ef6": [
+    "4d975aa3": [
       4
+    ],
+    "64aebef0": [
+      0,
+      7
     ],
     "e463835a": [
       0,
       7
     ],
-    "73327e99": [
-      4
-    ],
     "fdb45a54": [
       4
     ],
-    "2a8d8c9a": [
+    "141eca92": [
+      1
+    ],
+    "56a8576c": [
+      1
+    ],
+    "9176d998": [
       4
     ],
-    "528c5d08": [
-      4
-    ],
-    "7be30ef3": [
-      4
-    ],
-    "1c7c02ec": [
-      4
-    ],
-    "1d30a3b7": [
-      4
-    ],
-    "98174c0e": [
+    "3d713a72": [
       4
     ],
     "39837d7f": [
@@ -386,136 +395,138 @@
     "37317da0": [
       4
     ],
-    "4e7a4bee": [
+    "7ecaa87c": [
       4
     ],
-    "fbdbe97c": [
+    "2cfd7de2": [
       4
     ],
-    "466f472a": [
+    "6087ce64": [
+      4
+    ],
+    "607e2e2a": [
       4
     ],
     "501940d1": [
       0,
       7
     ],
-    "3d1203cc": [
-      4
-    ],
-    "1c70b836": [
+    "e27b11f4": [
       4
     ],
     "6f87858e": [
       0,
       7
     ],
-    "f2de44c2": [
+    "07a8c5c9": [
       4
     ],
-    "6d2f3542": [
+    "73ed9798": [
       4
     ],
-    "bbd381e8": [
+    "7036a92e": [
+      4
+    ],
+    "525ac374": [
+      4
+    ],
+    "3eb09304": [
+      4
+    ],
+    "4ec596d6": [
+      4
+    ],
+    "a0587dd4": [
+      4
+    ],
+    "2f607bd6": [
+      4
+    ],
+    "58b4a814": [
       4
     ],
     "acebaaa6": [
-      3
+      5
     ],
-    "524f2f08": [
-      4
-    ],
-    "299b5b75": [
-      4
-    ],
-    "830b42fc": [
-      1
-    ],
-    "e9b0bbd0": [
+    "da60dbee": [
       4
     ],
     "6793130f": [
       4
     ],
-    "b619ce5a": [
+    "df7a1c22": [
       4
     ],
-    "29f04434": [
+    "24f1d7e7": [
+      4
+    ],
+    "03986b13": [
       4
     ],
     "58c37c22": [
-      3
+      5
+    ],
+    "06349957": [
+      4
+    ],
+    "f512fbda": [
+      4
     ],
     "8af96156": [
       0,
       7
     ],
-    "0bb8b0ec": [
+    "68f03547": [
       4
     ],
     "696c0120": [
-      2
+      1
     ],
-    "e28ad05c": [
+    "2438cbe1": [
+      4
+    ],
+    "06ce3ce6": [
       4
     ],
     "3d0069d8": [
-      1
+      2
+    ],
+    "00012de0": [
+      4
+    ],
+    "790246a2": [
+      4
     ],
     "6a36a5c7": [
       4
     ],
-    "6d376d1c": [
+    "612f3baf": [
       4
     ],
     "2328fe5d": [
-      2
-    ],
-    "2c447258": [
-      4
+      1
     ],
     "216f857d": [
       4
     ],
-    "f85984b0": [
+    "5beab8ba": [
       4
     ],
     "14a765be": [
       0,
       7
     ],
-    "d1639e04": [
+    "e34a5858": [
       4
     ],
-    "55998bd8": [
+    "24e321dc": [
       4
     ],
-    "58b0328d": [
+    "1155fbd7": [
       4
     ],
-    "6f17b6a2": [
-      4
-    ],
-    "52f54708": [
-      4
-    ],
-    "559e178e": [
-      4
-    ],
-    "55a72efa": [
-      4
-    ],
-    "395fd1c4": [
-      4
-    ],
-    "099c059d": [
-      0,
-      7
-    ],
-    "18d26f16": [
-      4
-    ],
-    "0bfd7190": [
-      4
+    "3b833bf8": [
+      5
     ],
     "3f864c39": [
       4
@@ -523,78 +534,64 @@
     "ea0066e6": [
       4
     ],
-    "9fa35cb6": [
+    "398e1572": [
       4
     ],
     "1220d7bd": [
-      2
-    ],
-    "5d049f18": [
-      4
+      1
     ],
     "23657e28": [
       0,
       7
     ],
+    "0db1655a": [
+      4
+    ],
     "3a6f4cb8": [
       4
     ],
-    "66ca8c10": [
+    "065262b7": [
       4
     ],
-    "068ec0c8": [
+    "c44d4cac": [
       2
     ],
-    "091aff1d": [
+    "ca549928": [
       4
     ],
-    "8d391bf8": [
+    "1add825a": [
       4
+    ],
+    "099c059d": [
+      0,
+      7
     ],
     "59665d7e": [
       0,
       7
     ],
     "ab07abdc": [
-      3
+      5
     ],
-    "3d83df88": [
+    "25ab842e": [
+      4
+    ],
+    "023aa89b": [
+      4
+    ],
+    "3900e649": [
       4
     ],
     "3cf25257": [
-      5
+      3
     ],
-    "554696d6": [
-      4
-    ],
-    "74f0437d": [
-      4
-    ],
-    "0d9849c6": [
-      4
-    ],
-    "49cb8b3a": [
-      4
-    ],
-    "60ede85a": [
+    "22db444a": [
       4
     ],
     "1fb7ec73": [
-      2
+      1
     ],
-    "09a2ece8": [
-      4
-    ],
-    "56a2883e": [
-      4
-    ],
-    "abe5e8b8": [
-      4
-    ],
-    "1aa3e7d9": [
-      4
-    ],
-    "1459410a": [
+    "e6ce2936": [
       4
     ]
   }
