--- a/src/package.json
+++ b/src/package.json
@@ -9,13 +9,11 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@firebase/app": "^0.1.1",
-    "@firebase/database": "^0.1.1",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "nuxt": "^1.0.0-rc11"
+    "nuxt": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
